# SweepstacX

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CHANGELOG_UPDATE.md  COMPLETION_ANALYSIS.md  CONTRIBUTING.md  IMPROVEMENT_OPPORTUNITIES.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v5.0.0.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  setup_tooleval.sh  sweeper_plugins.yaml  sweepstacx-report.json  sweepstacx-report.md
.github/workflows/: ci.yml
docs/: PLUGINS.md  config-schema.json  configuration.md  index.md  installation.md  research_deep_dependency_analysis.md
docs/.vitepress/: config.js
docs/analyzers/: duplication.md
docs/commands/: benchmark.md  check.md  ci-template.md  complexity.md  deps.md  diff.md  dupes.md  export.md  fix.md  fuzz.md  html.md  index.md  init.md  insights.md  lint.md  patch.md  plugins.md  report.md  scan.md  score.md  security.md  trends.md  watch.md
examples/: .sweeperc.example.json  ci-integration.md
lab/: README.md  config.yml  lab.py
scripts/: safe-publish.sh
sim/: README.md  run_sim.py
sim/scenarios/: default.yml
src/: cli.js
src/analyzers/: angular.js  code-smells.js  complexity.js  dead-files.js  deep-deps.js  duplication.js  import-optimizer.js  react.js  (+5 more)
tests/: config.test.js  dead-files.test.js  python-unused-imports.fixture.py  python-unused-imports.test.cjs  report.test.js  scan.test.js  stale-deps.test.js  test_paths.py  test_smoke.py
tooleval/: __init__.py  cli.py
(+41 files in other folders)
